tests/fail/fn_nameless_arg.zf
foo(int, a: int): int {

}
